Additions to CloudToppedMixedLayerModels (#12)
* add analytic LWP expression as cloud thickness squared

* introduce a bit more parameters for cloud height

* mass rename CLT to RCT

* fix height variables and confusion for z_lcl, z_cb, etc.

* LWP-dependnt emissivty

* add linear and exact LWP; should never use exact!

* LWP-dependent cloud albedo!

* correct docs of new cloud functions

* remove cloud fraction option from cloud longwave

* restore option for cloud fraction in cooling

* add limiter to relaxation cloud fraction based on CLT

* add clamped linear process

* make cloud limiter use clamped leanr process;  make cloud albedo paramet

* add liquid water path process

* correct scope for c_kappa

* try set parameter convenience function

* add try set parameter to the docs

* rename ΔF -> ΔF_s; add ΔF_q

* also replace notation in radiation

* add default equation for DF_Q

* bump changelog

* fix docs

* clarity in s+ docstring

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -10,6 +10,49 @@ url = {http://doi.wiley.com/10.1029/RG019i001p00091},
 volume = {19},
 year = {1981}
 }
+@article{Stephens1978,
+author = {Stephens, G. L.},
+doi = {10.1175/1520-0469(1978)035<2123:RPIEWC>2.0.CO;2},
+file = {:C\:/Users/gd419/Downloads/atsc-1520-0469_1978_035_2123_rpiewc_2_0_co_2.pdf:pdf},
+issn = {0022-4928},
+journal = {Journal of the Atmospheric Sciences},
+mendeley-groups = {Clouds & Circulation/Optical Properties},
+month = {nov},
+number = {11},
+pages = {2123--2132},
+title = {{Radiation Profiles in Extended Water Clouds. II: Parameterization Schemes}},
+url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1978)035%3C2123:RPIEWC%3E2.0.CO;2},
+volume = {35},
+year = {1978}
+}
+@article{Lacis1974,
+author = {Lacis, Andrew A. and Hansen, James},
+doi = {10.1175/1520-0469(1974)031<0118:APFTAO>2.0.CO;2},
+issn = {0022-4928},
+journal = {Journal of the Atmospheric Sciences},
+month = {jan},
+number = {1},
+pages = {118--133},
+title = {{A Parameterization for the Absorption of Solar Radiation in the Earth's Atmosphere}},
+url = {http://journals.ametsoc.org/doi/10.1175/1520-0469(1974)031%3C0118:APFTAO%3E2.0.CO;2},
+volume = {31},
+year = {1974}
+}
+
+@article{Datseris2021,
+author = {Datseris, George and Stevens, Bjorn},
+doi = {10.1029/2021av000440},
+issn = {2576-604X},
+journal = {AGU Advances},
+mendeley-groups = {Albedo (Global) & Symmetry,Clouds & Circulation/Albedo/fraction},
+month = {sep},
+number = {3},
+publisher = {American Geophysical Union (AGU)},
+title = {{Earth's Albedo and Its Symmetry}},
+volume = {2},
+year = {2021}
+}
+
 
 @article{Bastiaansen2023,
 abstract = {Climate response metrics are used to quantify the Earth's climate response to anthropogenic changes of atmospheric CO2. Equilibrium climate sensitivity (ECS) is one such metric that measures the equilibrium response to CO2 doubling. However, both in their estimation and their usage, such metrics make assumptions on the linearity of climate response, although it is known that, especially for larger forcing levels, response can be nonlinear. Such nonlinear responses may become visible immediately in response to a larger perturbation, or may only become apparent after a long transient period. In this paper, we illustrate some potential problems and caveats when estimating ECS from transient simulations. We highlight ways that very slow time scales may lead to poor estimation of ECS even if there is seemingly good fit to linear response over moderate time scales. Moreover, such slow processes might lead to late abrupt responses (late tipping points) associated with a system's nonlinearities. We illustrate these ideas using simulations on a global energy balance model with dynamic albedo. We also discuss the implications for estimating ECS for global climate models, highlighting that it is likely to remain difficult to make definitive statements about the simulation times needed to reach an equilibrium.},
@@ -265,7 +308,6 @@ year = {2016}
 abstract = {Line‐by‐line radiative transfer computations show that the logarithmic dependence of radiative forcing on gas concentration not only applies to broadband irradiation fluxes such as in the well‐known case of the CO 2 forcing, but also applies to the spectral radiance change due to both CO 2 and other gases, such as H 2 O. The logarithmic relationship holds for monochromatic radiance requires an explanation beyond the conventional ideas based on the spectroscopic features of the gas absorption lines. We show that the phenomenon can be explained by an Emission Layer Displacement Model, which describes the radiance response to gas perturbation under normal atmospheric conditions such as temperature linearly varying with height and gas concentration exponentially decaying with height.},
 author = {Huang, Yi and {Bani Shahabadi}, Maziar},
 doi = {10.1002/2014JD022466},
-file = {:C\:/Users/datse/Documents/Mendeley Desktop/Huang, Bani Shahabadi/Huang, Bani Shahabadi - 2014.pdf:pdf},
 issn = {2169-897X},
 journal = {Journal of Geophysical Research: Atmospheres},
 keywords = {10.1002/2014JD022466 and radiative forcing,CO2,logarithmic,radiative transfer,spectroscopy,water vapor},
@@ -414,7 +456,6 @@ year = {2024}
 abstract = {Decoupling during the "Lagrangian" evolution of a cloud-topped boundary layer advected equatorward by the trade winds in an idealized eastern subtropical ocean is studied using a mixed-layer model (MLM). The sea surface temperature is gradually warmed while the free tropospheric sounding remains unchanged, causing the boundary layer to deepen, the surface relative humidity to decrease, and surface latent heat fluxes to increase. Diurnally averaged insolation is used. For entrainment closures in which entrainment rate is related to a large-eddy convective velocity scale w*, the MLM predicts an increasingly prominent layer of negative buoyancy fluxes below cloud base as the sea surface temperature warms. Decoupling of the mixed layer can be inferred when the MLM-predicted negative buoyancy fluxes become too large for the internal circulations to sustain. The authors show that decoupling is mainly driven by an increasing ratio of the surface latent heat flux to the net radiative cooling in the cloud, and derive a decoupling criterion based on this ratio. Other effects such as drizzle, the vertical distribution of radiative cooling in the cloud, and sensible heat fluxes, also affect decoupling but are shown to be less important in typical subtropical boundary layers. A comparison of MLM results with a companion numerical study with a cloud-resolving model shows that the decoupling process is similar and the same decoupling criterion applies. A regional analysis of decoupling using Lagrangian trajectories based on summertime northeast Pacific climatology predicts decoupling throughout the subtropical stratocumulus region except in coastal zones where the boundary layer is under 750 m deep. A "flux-partitioning" entrainment closure, in which the entrainment rate is chosen to maintain a specified ratio of some measure of negative subcloud buoyancy fluxes to positive buoyancy fluxes within the cloud and near the surface, was also considered. By construction, such an MLM never predicts its own breakdown by decoupling. The changed entrainment closure had only a minor influence on the boundary layer evolution and entrainment rate. Instead, the crucial impact of the entrainment closure is on predicting when and where the mixed-layer assumption will break down due to decoupling.},
 author = {Bretherton, Christopher S. and Wyant, Matthew C.},
 doi = {10.1175/1520-0469(1997)054<0148:MTLTSA>2.0.CO;2},
-file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Bretherton, Wyant - 1997 - Moisture transport, lower-tropospheric stability, and decoupling of cloud-topped boundary layers.pdf:pdf},
 issn = {00224928},
 journal = {Journal of the Atmospheric Sciences},
 mendeley-groups = {Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
@@ -428,7 +469,6 @@ year = {1997}
 abstract = {We review bulk representations of tropical and subtropical maritime atmospheric boundary layers. Three types of bulk representations are studied in detail: stratocumulus topped mixed layers, trade-wind layers, and sub-cloud mixed layers. Through the development of a consistent description of these disparate regimes, connections among their varied representations are emphasized, as well as their relation to regions of deeper convection. New results relating to the equilibrium mass flux and cloud fraction in the trade winds; the ability of bulk models to represent qualitatively major cloud regimes; and the relationship amongst different bulk representations of the surface layer are presented. Throughout we emphasize the identification of consistent and physically based mixing and cloud regime rules for use in intermediate complexity models of the tropical climate, which in turn can be used to study cloud and dynamical interactions on larger scales. {\textcopyright} Springer-Verlag 2006.},
 author = {Stevens, Bjorn},
 doi = {10.1007/s00162-006-0032-z},
-file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Stevens - 2006 - Bulk boundary-layer concepts for simplified models of tropical dynamics.pdf:pdf},
 issn = {09354964},
 journal = {Theoretical and Computational Fluid Dynamics},
 keywords = {Atmospheric boundary layer,Cumulus mass flux,Entrainment},
@@ -442,7 +482,6 @@ year = {2006}
 @article{RandalSuarez1984,
 author = {Randall, David A. and Suarez, Max J.},
 doi = {10.1175/1520-0469(1984)041<3052:OTDOSF>2.0.CO;2},
-file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Randall, Suarez - 1984 - On the Dynamics of Stratocumulus Formation and Dissipation(2).pdf:pdf},
 issn = {0022-4928},
 journal = {Journal of the Atmospheric Sciences},
 mendeley-groups = {Clouds & Circulation/SratoToCumulus},
@@ -457,7 +496,6 @@ year = {1984}
 @misc{Singer2023,
 author = {Singer, Clare E and Schneider, Tapio},
 doi = {10.22541/essoar.168167352.24863390/v1},
-file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer, Schneider - 2023 - Stratocumulus-cumulus transition explained by bulk boundary layer theory.pdf:pdf},
 institution = {Authorea, Inc.},
 mendeley-groups = {Clouds & Circulation/Multistability/Tipping,Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
 month = {apr},
@@ -469,7 +507,6 @@ year = {2023}
 abstract = {Stratocumulus clouds cover 20% of subtropical oceans and strongly cool the Earth by reflecting incoming shortwave radiation. Because of their small dynamical scales and their sensitivity to changing meteorological conditions, the response of stratocumulus clouds to climate change is one of the leading uncertainties in climate modeling. Recent work has made significant progress constraining this feedback using high-resolution large eddy simulations (LES) and satellite observations. Here we provide complementary constraints from a theoretical perspective, using a bulk boundary layer model to calculate the response of stratocumulus clouds to increasing CO 2. We extend the bulk model presented in Singer and Schneider (2023) by coupling it to a slab ocean to allow for feedbacks between cloud cover and surface warming and use ensemble Kalman inversion to calibrate model parameters. We conduct climate change experiments, forcing the bulk model with increasing CO 2 , and compare the cloud response to results from LES in Schneider et al. (2019). Past a critical CO 2 value, the cloud layer decouples from the surface, the clouds break up, and cloud fraction decreases to a shallow cumulus-like state. Cloud fraction shows hysteresis behavior, where the system remains in a low cloud fraction state even as CO 2 is decreased significantly past the breakup threshold. The hysteresis behavior is robust, but the critical CO 2 value is sensitive to parameters and assumptions of the bulk model. We show that surface warming and water vapor feedback are two important aspects of the breakup; without them, the critical CO 2 threshold for breakup is much larger. 5 SIGNIFICANCE STATEMENT: The purpose of this study, and the companion paper Singer and Schneider (2023), is to develop a simple model to explain mechanisms controlling stratocumulus-cumulus transitions. In this second paper, we describe the extended bulk model coupled to a slab ocean that is forced only with a prescribed CO 2 concentration. We calibrate key parameters of this model based on high-resolution simulations. The simple model, like the high-resolution simulations, shows that stratocumulus clouds break up at very high CO 2 concentrations and that the boundary layer exhibits hysteresis, remaining in a cumulus-like state until CO 2 is reduced significantly past the breakup threshold. We conclude by showing a series of mechanism-denial experiments that highlight the importance of surface temperature and water vapor feedbacks on the stratocumulus breakup.},
 author = {Singer, Clare E and Schneider, Tapio},
 doi = {10.22541/essoar.168167204.45220772/v1},
-file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer, Schneider - 2023 - CO 2-driven stratocumulus cloud breakup in a bulk boundary layer model.pdf:pdf},
 institution = {Authorea, Inc.},
 mendeley-groups = {Clouds & Circulation/Multistability/Tipping,Clouds & Circulation/Theory,Clouds & Circulation/SratoToCumulus},
 month = {apr},
