renames for clarity

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -514,3 +514,17 @@ title = {{CO2-driven stratocumulus cloud breakup in a bulk boundary layer model}
 url = {https://essopenarchive.org/users/536265/articles/635007-co2-driven-stratocumulus-cloud-breakup-in-a-bulk-boundary-layer-model?commit=3222e82bd286db5be70c8141004df041958316a3},
 year = {2023}
 }
+@article{Zhang2009,
+abstract = {This paper explores the capability of the mixed-layer model (MLM) to represent the observed relationship between low-cloud fraction and lower-tropospheric stability; it also investigates the influence of large-scale meteorological fields and their variability on this relationship. The MLM's local equilibrium solutions are examined subject to realistic boundary forcings that are derived from data of the 40-yr European Centre for Medium-Range Weather Forecasts Re-Analysis (ERA-40). The MLM is successful in reproducing the positive correlation between low-cloud fraction and lower-tropospheric stability. The most accurate relationship emerges when the forcings capture synoptic variability, in particular, the daily varying large-scale divergence is a leading factor in improving the regression slope. The feature of the results is mainly attributed to the model cloud fraction's intrinsic nonlinear response to the divergence field. Given this nonlinearity, the full range of divergence must be accounted for since a broad distribution of divergences will give a better cloud fraction overall, although model biases might still affect. individual MLM results. The model cloud fraction responds rather linearly to lower-tropospheric stability, and the distribution of the latter is less sensitive to sampling at different time scales than divergence. The strongest relationship between cloud fraction and stability emerges in the range of intermediate stability values. This conditional dependence is evident in both model results and observations. The observed correlation between cloud fraction and stability may thus depend on the underlying distribution of weather noise, and hence may not be appropriate in situations where such statistics can be expected to change. {\textcopyright} 2009 American Meteorological Society.},
+author = {Zhang, Yunyan and Stevens, Bjorn and Medeiros, Brian and Ghil, Michael},
+doi = {10.1175/2009JCLI2891.1},
+file = {:C\:/Users/gd419/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Zhang et al. - 2009 - Low-cloud fraction, lower-tropospheric stability, and large-scale divergence.pdf:pdf},
+issn = {08948755},
+journal = {Journal of Climate},
+mendeley-groups = {Clouds & Circulation/MixedLayerModels,Clouds & Circulation/Multistability Critical/Phase Transtions},
+number = {18},
+pages = {4827--4844},
+title = {{Low-cloud fraction, lower-tropospheric stability, and large-scale divergence}},
+volume = {22},
+year = {2009}
+}
